# ARIA

./: .gitignore  ARIA_Train_Full.bat  Cargo.toml  README.md  aria_dialogs.json  aria_tokenizer.json  build.rs  convert_dialog.py  convert_forum.py
data base/: DataBase.txt
examples/: overfit.rs  overfit_big.rs  overfit_big_asm.rs
screenshots/: ARIA-LOGO-ANSI.txt  ARIA-LOGO-ASCII.txt
src/: adaptive_softmax.rs  build.rs  db.rs  kernels.cu  lib.rs  lora.rs  lstm.wgsl  lstm_cuda.rs  lstm_gpu.rs  main.rs  math_train.rs  model.rs  model_cuda.rs  ppo.rs  pretraining.rs  storage.rs  tokenizer.rs  trainstep.rs  transformer_cuda.rs
