[package]
name = "aria"
version = "0.5.0"
edition = "2021"

[dependencies]
rayon = "1.7"
ndarray = "0.15"
ndarray-rand = "0.14"
wgpu = "0.20"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
crossbeam-channel = "0.5"
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chacha20poly1305 = "0.10"
base64 = "0.21"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
hex = "0.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 2

[[bin]]
name = "aria"
path = "src/main.rs"
