[package]
name = "aria"
version = "0.7.0"
edition = "2021"

[dependencies]
rayon = "1.10"
tch = "0.24.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chacha20poly1305 = "0.10"
base64 = "0.21"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
hex = "0.4"
serde_yaml = "0.9"
ndarray = "0.16"
ndarray-rand = "0.16"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 2

[[bin]]
name = "aria"
path = "src/main.rs"