[package]
name = "aria"
version = "3.1.0"
edition = "2021"
default-run = "aria"
build = "src/build.rs"

[dependencies]
rayon = "1.10"
cudarc = { version = "0.19", features = ["cublas", "driver", "nvrtc", "cuda-12090", "dynamic-linking", "f16"] }
half = { version = "2.4", features = ["num-traits"] }
ocl = "0.19"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chacha20poly1305 = "0.10"
base64 = "0.21"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
hex = "0.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 2

[[bin]]
name = "aria"
path = "src/main.rs"